Fri Dec 13 11:33:55 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: rename *shady* func/macros.
	  * RVALUE_RAW_SHADY()   -> RVALUE_WB_PROTECTED_RAW()
	  * RVALUE_SHADY()       -> RVALUE_RAW_SHADY()
	  * rgengc_check_shady() -> rgengc_check_relation().
	  And fix some messages using "shady" to "non-WB-protected".

Fri Dec 13 10:04:23 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/request_set/lockfile.rb:  Import RubyGems master a8d0669
	  with a 1.8.7 compatibility fix.
	* test/rubygems/test_gem_request_set_lockfile.rb:  ditto.

Fri Dec 13 09:50:49 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master ddac51f.  Changes:

	  * Allow override for the shared gem installation directory for
	    rubygems packagers.

	  * Lock gem cache files for read and write to improve thread safety.

	  * Use io/console when available.

	  * Minor cleanup.

	* test/rubygems:  ditto.

Fri Dec 13 08:15:31 2013  Aman Gupta <ruby@tmm1.net>

	* class.c (include_modules_at): use RCLASS_M_TBL_WRAPPER for
	  equality checks. this avoids an unnecessary deference inside a tight
	  loop, fixing a performance regression from r43973.
	* object.c (rb_obj_is_kind_of): ditto.
	* object.c (rb_class_inherited_p): ditto.

Wed Dec 13 02:00:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (VpSetPTR): fix for limitation of the resulting
	  precision.
	  [ruby-core:50269] [Bug #7458]

	* test/bigdecimal/test_bigdecimal.rb (test_limit): add tests for the above
	  change.

Wed Dec 13 01:56:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (VpAddAbs): put out a conditional branch from
	  the inside of while-loop.

	* ext/bigdecimal/bigdecimal.c (VpSubAbs): ditto.

Wed Dec 13 01:53:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (VPrint): be a static function, support another
	  dump formats, and add more information of the given bigdecimal.

	* ext/bigdecimal/bigdecimal.h: ditto.
